--- a/socio_seminar_project/third_person.Rnw
+++ b/socio_seminar_project/third_person.Rnw
@@ -18,8 +18,8 @@
     \bibliographystyle{apalike}
   % Title info
   \author{Joshua McNeill}
-  \title{Third person plural subject pronouns in Louisiana French\footnote{Data and code available at \url{https://github.com/joshisanonymous/class_assignments/tree/master/socio_seminar_project}.}}
-  \date{May 1st, 2019}
+  \title{Third person plural subject pronouns in Louisiana French\footnote{Code available at \url{https://github.com/joshisanonymous/class_assignments/tree/master/socio_seminar_project}.}}
+  \date{May 6th, 2019}
 \begin{document}
   <<settings_load_scripts, echo = FALSE>>=
   read_chunk("analysis.R")
@@ -36,10 +36,10 @@
   \section{Introduction}
     \label{sec:intro}
     Louisiana is perhaps linguistically unique in being a U.S. state where French has been a major or even majority language up until relatively recently, at least in the southern portion of the state. Indeed, the 1970 census showed that there were still roughly 500,000 people in Louisiana who claimed French as their mothertongue \citep[as cited in][pp.~19/36]{johnson_louisiana_1976}, though there is evidence that the continuation of French in Louisiana was in danger by the end of the 1980s \citep{trepanier_french_1988}. Up until that time period, speakers were generally described as living in isolation both from community to community and from the rest of the francophone world (\citeauthor{gold_french_1979}, \citeyear[p.~272]{gold_french_1979}; \citeauthor{johnson_louisiana_1976}, \citeyear[p.~28]{johnson_louisiana_1976}), which perhaps explains some of the unique features of the variety spoken there.
-
+% Don't forget to cite your textbook
     One interesting and unique feature of Louisiana French is its pronoun system, particularly third person plural subject pronouns. Two third person plural subject pronouns are normally found in French textbooks: \emph{ils} and \emph{elles}. The former is masculine or mixed gender and the latter is feminine. These are also used for inanimate referents. In Louisiana French, however, \emph{elles} is presumed to not exist \citep[p.~84]{papen_structural_1997}, whereas several pronouns that are unattested elsewhere or only attested as disjunctive pronouns are added to the list of third person plural subject pronouns in Louisiana so that the full set includes \emph{ils}, \emph{ça}, \emph{eux}, \emph{eux-autres}, and \emph{yé} (\citeauthor{brown_pronominal_1988}, \citeyear[pp.~152-153]{brown_pronominal_1988}; \citeauthor{byers_defining_1988}, \citeyear[pp.~88-92]{byers_defining_1988}; \citeauthor{klingler_if_2003}, \citeyear[p.~206]{klingler_if_2003}; \citeauthor{papen_structural_1997}, \citeyear[p.~84]{papen_structural_1997}; \citeauthor{rottet_language_1995}, \citeyear[p.~201]{rottet_language_1995}; \citeauthor{smith_morphosyntactic_1994}, \citeyear[p.~60]{smith_morphosyntactic_1994}).
 
-    Quantitative analyses of the third person plural subject pronouns in Louisiana French have suggested several constraints on their realizations. Socially, speakers under the age of 50 seem to prefer \emph{ça} in Avoyelles and Assumption Parishes \citep[p.~178]{brown_pronominal_1988}, whereas those under the age of 55 seem to prefer \emph{eux} in Houma \citep[p.~207]{rottet_language_1995}.\footnote{These areas can be seen in Figure (\ref{fig:map}).} \citet{brown_pronominal_1988} also found that speakers in Avoyelles Parish in general preferred \emph{ça}, whereas those in Assumption Parish dispreferred it (p.~176), Finally, \citet{rottet_language_1995} found that speakers who identified as Indian use \emph{eux} much more than the other forms, whereas there was no clear preference for speakers who identified as Cajun (p.~207).
+    Quantitative analyses of the third person plural subject pronouns in Louisiana French have suggested several constraints on their realizations. Socially, speakers under the age of 50 seem to prefer \emph{ça} in Avoyelles and Assumption Parishes\footnote{Parishes in Louisiana are equivalent to counties in other U.S. states.} \citep[p.~178]{brown_pronominal_1988}, whereas those under the age of 55 seem to prefer \emph{eux} in Houma \citep[p.~207]{rottet_language_1995}.\footnote{These areas can be seen in Figure (\ref{fig:map}).} \citet{brown_pronominal_1988} also found that speakers in Avoyelles Parish in general preferred \emph{ça}, whereas those in Assumption Parish dispreferred it (p.~176), Finally, \citet{rottet_language_1995} found that speakers who identified as Indian use \emph{eux} much more than the other forms, whereas there was no clear preference for speakers who identified as Cajun (p.~207).
 
     \begin{figure}[tb]
       \caption{Locations sampled in \citet{brown_pronominal_1988}, \citet{rottet_language_1995}, and the current study}
@@ -75,7 +75,7 @@
       \end{tabular}
     \end{table}
 
-    It is worth noting that conducting interviews over Skype, while convenient, does present its own set of issues. On the convenience side, almost anyone can be reached through Skype, reducing the cost and trouble of traveling. The fact that Skype is not just an audio interface but a video interface as well also makes the exchanges feel more natural and comfortable. That said, not all potential participants are themselves comfortable with working such modern technologies. Among the participants in this study, Coulson was unfamiliar with the software and did not seem to have a camera set up, though the audio came through very clearly. Ward was able to use video, though his microphone and his computer's audio device left much to be desired sound-wise. At times, I was unable to determine just what was said during the transcription process due to this issue. However, Skype's advantages and disadvantages perhaps balance each other out. Ideally, recording speakers in person would have been preferred, but there does not appear to be a great deal lost from carrying out interviews over Skype.
+    It is worth noting that conducting interviews over Skype, while convenient, does present its own set of issues. On the convenience side, almost anyone can be reached through Skype, reducing the cost and trouble of traveling. The fact that Skype is not just an audio interface but a video interface as well also makes the exchanges feel more natural and comfortable. That said, not all potential participants are themselves comfortable with working such modern technologies. Among the participants in this study, Coulson was unfamiliar with the software and did not seem to have a camera set up, though he was quite successful in figuring it out, and the audio came through very clearly. Ward was able to use video, though the sound quality, likely related to the microphone or the computer's audio device, was not as good as it would have been if professional equipment was used in person. At times, I was unable to determine just what was said during the transcription process due to this issue. However, Skype's advantages and disadvantages perhaps balance each other out. Ideally, recording speakers in person would have been preferred, but there does not appear to be a great deal lost from carrying out interviews over Skype.
 
     The interview data, once collected, was transcribed manually, first into plain text and then into segments and tiers using ELAN \citep{brugman_annotating_2004}. Relevant lines of plain text (i.e., those potentially containing tokens of third person plural subject pronouns) were extracted using a script, the crux of which was the regular expression \lstinline+(ça|c'|ils|elles|eux)+\footnote{The pronoun \emph{eux-autres} was not enumerated in the regular expression because \lstinline+eux+ would capture it just as well.}. Once all of the lines which did not actually include relevant tokens were excluded, tokens within the resulting lines were then coded for specificity of the referent, animacy of the referent, distance from the explicit referent, and the type of the following verb using pseudo-XML tags in the original plain text transcripts in the format \lstinline+<spec,anim,dist,verb>token</spec,anim,dist,verb>+. This made it possible to use another script to extract tokens and their codings and save them to a \lstinline+csv+ file directly, this time using the regular expression \lstinline+^<(.*),(.*),(.*),(.*)\>(.*)\</.*\>$+ in order to capture each code as a group. Additionally, it is worth noting that where multiple tokens of (ils) were produced in a row due to presumed hesitation, only the final token was coded and extracted.
 
@@ -162,7 +162,7 @@
       \end{tabular}
     \end{table}
 
-    Figure (\ref{fig:dist_by_verb_and_dist}) provides a useful visualization of the situation in this data when dividing it up according to verb type and referent distance. When moving between \emph{être} or \emph{avoir} and regular verbs. the frequencies of \emph{ça} and \emph{ils} reverse regardless of whether the referent is mentioned in the same T-unit or not. The contrast when moving between tokens whose referent is in the same T-unit and those whose referent is not in the same T-unit is not so stark. In fact, the general pattern does not change; the difference in frequency between the two pronouns simply shrinks. For regular verbs, for instance, \emph{ça} is always more frequent, but \emph{ils} is closer to the frequency of \emph{ça} when the referent is mentioned in the T-unit.
+    Figure (\ref{fig:dist_by_verb_and_dist}) provides a useful visualization of the situation in this data when dividing it up according to verb type and referent distance. When moving between \emph{être} or \emph{avoir} and regular verbs, the frequencies of \emph{ça} and \emph{ils} reverse regardless of whether the referent is mentioned in the same T-unit or not. The contrast when moving between tokens whose referent is in the same T-unit and those whose referent is not in the same T-unit is not so stark. In fact, the general pattern does not change; the difference in frequency between the two pronouns simply shrinks. For regular verbs, for instance, \emph{ça} is always more frequent, but \emph{ils} is closer to the frequency of \emph{ça} when the referent is mentioned in the T-unit.
 
     \begin{figure}[tb]
       \caption{Frequency of \emph{ça} vs \emph{ils} by verb type and distance from the referent}
@@ -174,15 +174,15 @@
 
   \section{Discussion}
     \label{sec:discussion}
-    The results of the current analysis suggest that verb type is the most important factor for predicting which variant of (ils) will be produced. Regular verbs are associated with \emph{ça}, whereas \emph{être} and \emph{avoir} are associated with \emph{ils}. This result mostly corroborates \citeauthor{brown_pronominal_1988}'s (\citeyear{brown_pronominal_1988}) finding that \emph{ça} was dispreferred with modal verbs, as \emph{être} and \emph{avoir}, being auxiliary verbs, can easily be conceptualized as belonging to a broader category such as modal verbs. Although modal verbs in general did not serve as a category for the verb type factor in the present study, a cursory view of the transcriptions suggests that any preference for \emph{ils} in these cases would not be as strong as with auxiliary verbs only. It is in fact possible that the delineation of categories that \citeauthor{brown_pronominal_1988} used was simply not fine enough, although the current data would need to be coded for modal verbs to come to any solid conclusion in this regard.
+    The results of the current analysis suggest that verb type is the most important factor for predicting which variant of (ils) will be produced. Regular verbs are associated with \emph{ça}, whereas \emph{être} and \emph{avoir} are associated with \emph{ils}. This result mostly corroborates \citeauthor{brown_pronominal_1988}'s (\citeyear{brown_pronominal_1988}) finding that \emph{ça} was dispreferred with modal verbs, as \emph{être} and \emph{avoir}, being auxiliary verbs, can easily be conceptualized as belonging to a broader category such as modal verbs. Although modal verbs in general did not serve as a category for the verb type factor in the present study, a cursory view of the transcriptions suggests that any preference for \emph{ils} in these cases would not be as strong as with auxiliary verbs only. It is in fact possible that the delineation of categories that \citet{brown_pronominal_1988} used was simply not fine enough, although the current data would need to be coded for modal verbs to come to any solid conclusion in this regard.
 
     There are, however, some limitations to the analyses performed on the data coming from the conducted sociolinguistic interviews. Firstly, with only four participants, it would be difficult to argue that these results are generalizable to a larger population. Indeed, these four speakers were raised in regions of Louisiana that are hundreds of miles apart from each other, making it difficult to generalize these results to even a single neighborhood or city. Secondly, the small sample of participants also makes it difficult to analyze social variation in this data. It does appear that there are differences related to the age of the speakers and/or to their first languages, particularly in Ward's production of (ils), but a much broader range of speakers would be necessary to begin drawing conclusions about the importance of different social factors.
 
-    To that end, I propose carrying out the translation task in Appendix (\ref{app:trans_task}) with a much larger sample of speakers. Translation tasks have three notable advantages to interviews: 1) they allow the researcher to obtain exactly the sort of tokens they are after, 2) they can be be carried out much more quickly than interviews, and 3) they can be transcribed much more quickly than interviews. Although this would not facilitate obtaining much depth of language data for each speaker, it would facilitate obtaining a breadth of language data across many speakers.
+    To that end, I propose carrying out the translation task in Appendix (\ref{app:trans_task}) with a much larger sample of speakers. Translation tasks have three notable advantages over interviews: 1) they allow the researcher to obtain exactly the sort of tokens they are after, 2) they can be be carried out much more quickly than interviews, and 3) they can be transcribed much more quickly than interviews. Although this would not facilitate obtaining much depth in the language data for each speaker, it would facilitate obtaining a breadth of language data across many speakers.
 
-    There is also an issue of whether the data obtained from translation tasks is natural speech. To whatever extent one subscribes to \citeauthor{labov_principles_1972}'s (\citeyear{labov_principles_1972}) vernacular principle and the primacy of said vernacular style, this does not appear to be an issue with Louisiana French speakers. Perhaps it is due to the infrequency with which they are able to find other French speakers with whom they can speak, or perhaps it is simply due to my own attempts to imitate their way of speaking, but there was no sign of linguistic self-consciousness during the interviews conducted for this study. Indeed, Coulson felt comfortable enough to use an English borrowing in his very first utterance, and Fitz's metalinguistic comments about using Louisiana Creole features suggested that he was positively anxious to show off his linguistic virtuosity, whereas one might otherwise expect these features to be stygmatized. Perhaps the only speaker to show any signs of self-consciousness was Ward, who was coincidentally the only speaker taking structured courses in French at the time of the interviews. It is possible that whatever overt commentary he receives on his language skills in classes has provided him incentive to prefer \emph{ils} and employ \emph{être} for compositional past tenses for verbs of change and movement where the other speakers used \emph{avoir} regardless of the verb. This distinction has in fact been analyzed sociolinguistically in other varieties of French since at least the 1970s \citep[e.g.,][]{sankoff_linguistic_1978}. There is thus reason to believe that the first translation Louisiana French speakers offer for each sentence of a translation task would be their typical utterance for similar sentences.
+    There is also an issue of whether the data obtained from translation tasks is natural speech. To whatever extent one subscribes to \citeauthor{labov_principles_1972}'s (\citeyear{labov_principles_1972}) vernacular principle and the primacy of said vernacular style, this does not appear to be an issue with Louisiana French speakers. Perhaps it is due to the infrequency with which they are able to find other French speakers with whom they can speak, or perhaps it is simply due to my own attempts to imitate their way of speaking, but there was no sign of linguistic self-consciousness during the interviews conducted for this study. Indeed, Coulson felt comfortable enough to use an English borrowing in his very first utterance, and Fitz's metalinguistic comments about using Louisiana Creole features suggested that he was positively anxious to show off his linguistic virtuosity, whereas one might otherwise expect these features to be stygmatized. Perhaps the only speaker to show any signs of potential self-consciousness was Ward, who was coincidentally the only speaker taking structured courses in French at the time of the interviews. It is possible that whatever overt commentary he receives on his language skills in classes has provided him incentive to prefer \emph{ils} and employ \emph{être} for compositional past tenses for verbs of change and movement where the other speakers used \emph{avoir} regardless of the verb. This distinction has in fact been analyzed sociolinguistically in other varieties of French since at least the 1970s \citep[e.g.,][]{sankoff_linguistic_1978}. Although it is certainly not possible to draw any conclusion in the current study that Ward was self-conscious instead of simply having a preference for the constructions that he used. There is thus reason to believe that the first translation Louisiana French speakers offer for each sentence of a translation task would be their typical utterance for similar sentences.
 
-    Finally, there remains the question of whether every combination of the structural factors laid out in this study can be combined. In particular, it is not clear whether there truly exists a inanimate form of the generic third person plural pronoun. For instance, the following sentences are less than satisfying attempts at creating such reference, though they are perhaps the best that can be done:
+    Finally, there remains the question of whether every combination of the structural factors laid out in this study can be combined. In particular, it is not clear whether there truly exists an inanimate form of the generic third person plural pronoun. For instance, the following sentences are less than satisfying attempts at creating such reference, though they are perhaps the best that can be done:
     \begin{itemize}
       \item (Être/Avoir-Generic-Inanimate-Close) Things, they are what they are.
       \item (Regular-Generic-Inanimate-Distant) Things would be good to have. They cost a lot, though.
